Help and support done By Abdul Moiz

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
-        integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
     <title>MH-Voting</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -48,15 +47,11 @@
                     <p class="section-label">Your Voice. Your Vote</p>
                     <h1 class="section-title">Your vote matters - and so does your experience.</h1>
                     <p class="section-description">
-                        Welcome to MH Voting. The trusted platform for secure and seamless online voting. Our mission is
-                        to make voting simple, accessible, and hassle-free, so you can cast your vote anytime, anywhere,
-                        with confidence. Whether you're participating in elections,
-                        polls, or surveys, we prioritize security and ease of use to ensure your voice is heard. Join us
-                        today and be part of the future of voting.
+                        Welcome to MH Voting. The trusted platform for secure and seamless online voting. Our mission is to make voting simple, accessible, and hassle-free, so you can cast your vote anytime, anywhere, with confidence. Whether you're participating in elections,
+                        polls, or surveys, we prioritize security and ease of use to ensure your voice is heard. Join us today and be part of the future of voting.
                     </p>
                     <div class="button-group">
-                        <a href="/vote Now/votenow.html" style="display: none;" class="contact-button vote"
-                            id="voteNow">Vote
+                        <a href="/vote Now/votenow.html" style="display: none;" class="contact-button vote" id="voteNow">Vote
                             Now</a>
                         <a class="contact-button" id="register">Register</a>
                         <a class="contact-button" id="tower">Take Tour</a>
@@ -64,8 +59,7 @@
                 </div>
                 <div class="content-mid">
                     <div class="remove-cont">
-                        <i style="display: none;" onclick=removeProfile() id="remove"
-                            class="fa-solid fas fa-arrow-right "></i>
+                        <i style="display: none;" onclick=removeProfile() id="remove" class="fa-solid fas fa-arrow-right "></i>
                     </div>
                     <div class="userdetail-cont">
                         <i style="margin-bottom: 10px;" class="fa-regular fa-user"></i>
@@ -78,8 +72,7 @@
                     </div>
                     <div class="userdetail-links-cont" style="padding: 5px; display: flex; flex-direction: column;">
                         <!-- settings -->
-                        <div class="userdetail-link"
-                            style="display: flex; justify-content: space-between; align-items:center; margin: 12px 0px;">
+                        <div class="userdetail-link" style="display: flex; justify-content: space-between; align-items:center; margin: 12px 0px;">
                             <div style="display: flex;align-items:center; justify-content: center;" class="left">
                                 <i style="font-size: 1rem; margin-right: 5px;" class="fa-solid fa-bars"></i>
                                 <p style="margin: 0 auto;">settings</p>
@@ -87,8 +80,7 @@
                             <div class="right"><i style="font-size: 0.8rem;" class="fa-solid fa-greater-than"></i></div>
                         </div>
                         <!-- voter list -->
-                        <div class="userdetail-link"
-                            style="display: flex; justify-content: space-between; align-items:center; margin: 8px 0px;">
+                        <div class="userdetail-link" style="display: flex; justify-content: space-between; align-items:center; margin: 8px 0px;">
                             <div style="display: flex; align-items:center; justify-content: center;" class="left">
                                 <i style="font-size: 1rem;" class="fa-solid fa-check-to-slot"></i>
                                 <p style="margin: 0 auto;">Voter List</p>
@@ -102,11 +94,9 @@
                             <!-- Voted societies will be listed here -->
                         </div>
                         <!-- change pass -->
-                        <div class="userdetail-link"
-                            style="display: flex;justify-content: space-between; align-items:center; margin: 8px 0px;">
+                        <div class="userdetail-link" style="display: flex;justify-content: space-between; align-items:center; margin: 8px 0px;">
                             <div style="display: flex;align-items:center; justify-content: center;" class="left">
-                                <i style="font-size: 1rem;display: flex;align-items:center; justify-content: center;"
-                                    class="fa-solid fa-key"></i>
+                                <i style="font-size: 1rem;display: flex;align-items:center; justify-content: center;" class="fa-solid fa-key"></i>
                                 <p>change password</p>
                             </div>
                             <div class="right"><i style="font-size: 0.8rem;" class="fa-solid fa-greater-than"></i></div>
@@ -114,19 +104,16 @@
 
                     </div>
                     <div style="padding: 5px; display: flex; flex-direction: column;" class="userdetail-bottom-link">
-                        <div class="userdetail-link"
-                            style="display: flex; justify-content: space-between; align-items:center; margin: 8px 0px;">
+                        <div class="userdetail-link" style="display: flex; justify-content: space-between; align-items:center; margin: 8px 0px;">
                             <div style="display: flex;align-items:center; justify-content: center;" class="left">
                                 <i style="font-size: 0.9rem;" class=" fa-solid fa-brands fa-hire-a-helper"></i>
-                                <p>Help & support</p>
+                                <a style="text-decoration: none; color: black;" href="helpSupport/help.html">help and support</a>
                             </div>
                             <div class="right"><i style="font-size: 0.8rem;" class="fa-solid fa-greater-than"></i></div>
                         </div>
-                        <div class="userdetail-link"
-                            style="display: flex; justify-content: space-between; align-items:center; margin: 8px 0px;">
+                        <div class="userdetail-link" style="display: flex; justify-content: space-between; align-items:center; margin: 8px 0px;">
                             <div style="display: flex;align-items:center; justify-content: center;" class="left">
-                                <i style="display: none; text-align: left; font-size: 1rem;" id="logoutButton"
-                                    onclick=logout() class="fa-solid fa-right-from-bracket"></i>
+                                <i style="display: none; text-align: left; font-size: 1rem;" id="logoutButton" onclick=logout() class="fa-solid fa-right-from-bracket"></i>
                                 <p>log out</p>
                             </div>
 
@@ -177,8 +164,7 @@
                         Our competitive advantage
                     </h2>
                     <p class="main-description">
-                        This is a section of some simple filler text, also known as placeholder text. It shares some
-                        characteristics of real written text but is random or otherwise generated.
+                        This is a section of some simple filler text, also known as placeholder text. It shares some characteristics of real written text but is random or otherwise generated.
                     </p>
                 </div>
 
@@ -194,8 +180,7 @@
                                 Personalized Learning
                             </div>
                             <div class="feature-description">
-                                Offer tailored learning experiences through AI and machine learning to cater to
-                                individual student needs.
+                                Offer tailored learning experiences through AI and machine learning to cater to individual student needs.
                             </div>
                         </div>
                     </div>
@@ -209,8 +194,7 @@
                                 Affordability
                             </div>
                             <div class="feature-description">
-                                Provide high-quality education at an affordable price point, making it accessible to a
-                                broader audience.
+                                Provide high-quality education at an affordable price point, making it accessible to a broader audience.
                             </div>
                         </div>
                     </div>
@@ -224,8 +208,7 @@
                                 Industry Partnerships
                             </div>
                             <div class="feature-description">
-                                Collaborate with well-known companies and institutions to offer accredited courses and
-                                certifications, adding credibility to your offerings.
+                                Collaborate with well-known companies and institutions to offer accredited courses and certifications, adding credibility to your offerings.
                             </div>
                         </div>
                     </div>
@@ -239,8 +222,7 @@
                                 Innovative Technology
                             </div>
                             <div class="feature-description">
-                                Utilize cutting-edge technology, such as augmented reality or virtual reality, to create
-                                immersive learning experiences.
+                                Utilize cutting-edge technology, such as augmented reality or virtual reality, to create immersive learning experiences.
                             </div>
                         </div>
                     </div>
@@ -268,8 +250,7 @@
                                 Analytics and Insights
                             </div>
                             <div class="feature-description">
-                                Offer detailed progress tracking and analytics to help students and teachers monitor
-                                performance and make data-driven decisions.
+                                Offer detailed progress tracking and analytics to help students and teachers monitor performance and make data-driven decisions.
                             </div>
                         </div>
                     </div>
@@ -323,8 +304,7 @@
                 <div class="footer-top">
 
                     <div class="comp-logo">
-                        <img style="width: 150px; height: 150px;" src="Photos/logo.jpg" alt="logoImage"
-                            class="logo-icon" />
+                        <img style="width: 150px; height: 150px;" src="Photos/logo.jpg" alt="logoImage" class="logo-icon" />
                     </div>
 
                     <p class="filler-text">Seamless Learning for Brighter Futures.</p>
