--- a/helpSupport/help.html
+++ b/helpSupport/help.html
@@ -230,12 +230,13 @@
             <!-- Contact Form Section -->
             <section id="contact" class="contact-form">
                 <h2>Contact Us</h2>
-                <form action="#" method="post">
-                    <input type="text" name="name" placeholder="Your Name" required>
-                    <input type="email" name="email" placeholder="Your Email" required>
-                    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+                <form id="contactForm" onsubmit="return validateForm()">
+                    <input type="text" name="name" id="name" placeholder="Your Name">
+                    <input type="email" name="email" id="email" placeholder="Your Email">
+                    <textarea name="message" id="message" rows="5" placeholder="Your Message"></textarea>
                     <button type="submit">Submit</button>
                 </form>
+                <p id="error" style="color: red; display: none;">Please fill out all fields correctly.</p>
             </section>
         </div>
 
@@ -253,6 +254,35 @@
     <footer>
         <p>&copy; 2024 Mh Voting. All rights reserved.</p>
     </footer>
+
+    <script>
+        // JavaScript Validation Function
+        function validateForm() {
+            var name = document.getElementById('name').value;
+            var email = document.getElementById('email').value;
+            var message = document.getElementById('message').value;
+            var errorMessage = document.getElementById('error');
+
+            // Simple email regex for validation
+            var emailPattern = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,6}$/;
+
+            if (name == "" || email == "" || message == "") {
+                errorMessage.textContent = "All fields are required.";
+                errorMessage.style.display = "block";
+                return false;
+            }
+
+            if (!emailPattern.test(email)) {
+                errorMessage.textContent = "Please enter a valid email address.";
+                errorMessage.style.display = "block";
+                return false;
+            }
+
+            // Hide error message if validation passes
+            errorMessage.style.display = "none";
+            return true;
+        }
+    </script>
 
 </body>
 
