--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                     <a href="/vote Now/votenow.html" class="nav-link vote">Vote Now</a>
                     <a href="/Admin Panel/admin.html" class="nav-link">Admin panel</a>
                     <a href="/FeedBack Form/feedback.html" class="nav-link">Feedback</a>
+                    <a href="/helpSupport/help.html" class="nav-link">Help and Support</a>
+
                 </nav>
 
                 <div id="profileButtonContainer">
@@ -104,13 +106,13 @@
 
                     </div>
                     <div style="padding: 5px; display: flex; flex-direction: column;" class="userdetail-bottom-link">
-                        <div class="userdetail-link" style="display: flex; justify-content: space-between; align-items:center; margin: 8px 0px;">
+                        <!-- <div class="userdetail-link" style="display: flex; justify-content: space-between; align-items:center; margin: 8px 0px;">
                             <div style="display: flex;align-items:center; justify-content: center;" class="left">
                                 <i style="font-size: 0.9rem;" class=" fa-solid fa-brands fa-hire-a-helper"></i>
                                 <a style="text-decoration: none; color: black;" href="helpSupport/help.html">help and support</a>
                             </div>
                             <div class="right"><i style="font-size: 0.8rem;" class="fa-solid fa-greater-than"></i></div>
-                        </div>
+                        </div> -->
                         <div class="userdetail-link" style="display: flex; justify-content: space-between; align-items:center; margin: 8px 0px;">
                             <div style="display: flex;align-items:center; justify-content: center;" class="left">
                                 <i style="display: none; text-align: left; font-size: 1rem;" id="logoutButton" onclick=logout() class="fa-solid fa-right-from-bracket"></i>
