--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <nav class="nav" id="navMenu">
                     <a href="#" class="nav-link">Home</a>
                     <a href="/vote Now/votenow.html" class="nav-link vote">Vote Now</a>
-                    <a href="/Admin Panel/admin.html" class="nav-link">Admin panel</a>
+                    <a href="/Admin Panel/adminLogin.html" class="nav-link">Admin panel</a>
                     <a href="/FeedBack Form/feedback.html" class="nav-link">Feedback</a>
                     <a href="/helpSupport/help.html" class="nav-link">Help and Support</a>
 
