done by Hashid gaba

--- a/FeedBack Form/feedback.html
+++ b/FeedBack Form/feedback.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feed Back Form</title>
     <link rel="stylesheet" href="feedback.css">
-    <link rel="stylesheet" href="/landing page/style.css">
 
 </head>
 
@@ -37,7 +36,7 @@
                     <input type="radio" id="star1" name="rating" value="1"><label for="star1" class="star">&#9733;</label>
                 </div>
             </div>
-            <button style="margin: 0 auto;" type="submit" class="contact-button">Submit Feedback</button>
+            <button style="margin: 0 auto;" type="submit" class="submit-btn">Submit Feedback</button>
         </form>
     </div>
 
