--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a href="/vote Now/votenow.html" style="display: none;" class="contact-button vote" id="voteNow">Vote
                             Now</a>
                         <a class="contact-button" id="register">Register</a>
-                        <a class="contact-button" id="tower">Take Tour</a>
+                        <a href="helpSupport/help.html" class="contact-button" id="tower">contact us</a>
                     </div>
                 </div>
                 <div class="content-mid">
@@ -106,13 +106,7 @@
 
                     </div>
                     <div style="padding: 5px; display: flex; flex-direction: column;" class="userdetail-bottom-link">
-                        <!-- <div class="userdetail-link" style="display: flex; justify-content: space-between; align-items:center; margin: 8px 0px;">
-                            <div style="display: flex;align-items:center; justify-content: center;" class="left">
-                                <i style="font-size: 0.9rem;" class=" fa-solid fa-brands fa-hire-a-helper"></i>
-                                <a style="text-decoration: none; color: black;" href="helpSupport/help.html">help and support</a>
-                            </div>
-                            <div class="right"><i style="font-size: 0.8rem;" class="fa-solid fa-greater-than"></i></div>
-                        </div> -->
+                        
                         <div class="userdetail-link" style="display: flex; justify-content: space-between; align-items:center; margin: 8px 0px;">
                             <div style="display: flex;align-items:center; justify-content: center;" class="left">
                                 <i style="display: none; text-align: left; font-size: 1rem;" id="logoutButton" onclick=logout() class="fa-solid fa-right-from-bracket"></i>
