--- a/index.html
+++ b/index.html
@@ -19,20 +19,17 @@
                 <div class="logo">
                     <img src="Photos/logo.jpg" alt="logoImage" class="logo-icon" />
                 </div>
-
                 <!-- Hamburger Icon -->
-                <div class="hamburger" id="hamburger">
-                    <i class="fa-solid fa-bars"></i>
-                </div>
-
+                    <i class="fa-solid fa-bars hamburger"></i>
+            
                 <!-- Navigation Links -->
                 <nav class="nav" id="navMenu">
+                    <img src="Photos/logo.jpg" alt="logoImage" class="nav-logo-icon" />
                     <a href="#" class="nav-link">Home</a>
                     <a href="/vote Now/votenow.html" class="nav-link vote">Vote Now</a>
                     <a href="/Admin Panel/adminLogin.html" class="nav-link">Admin panel</a>
                     <a href="/FeedBack Form/feedback.html" class="nav-link">Feedback</a>
                     <a href="/helpSupport/help.html" class="nav-link">Help and Support</a>
-
                 </nav>
 
                 <div id="profileButtonContainer">
