--- a/FeedBack Form/feedback.html
+++ b/FeedBack Form/feedback.html
@@ -13,7 +13,7 @@
     <div class="feedback-container">
         <h1>Feedback Form</h1>
         <p>We would love to hear your thoughts!</p>
-        <form action="#" method="POST" class="feedback-form">
+        <form  class="feedback-form">
             <div class="form-group">
                 <label for="name">Full Name</label>
                 <input type="text" id="name" name="name" placeholder="Enter your full name" required>
@@ -39,7 +39,6 @@
             <button style="margin: 0 auto;" type="submit" class="submit-btn">Submit Feedback</button>
         </form>
     </div>
-
 </body>
 
 </html>
