--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <a href="/Admin Panel/admin.html" class="nav-link admin">Dashboard</a>
                     <a href="/FeedBack Form/feedback.html" class="nav-link adminHide">Feedback</a>
                     <a href="/helpSupport/help.html" class="nav-link adminHide">Help and Support</a>
-                    <a  class="nav-link admin">Settings</a>
-                    <a class="nav-link admin " id="adminLogout" onclick=logout()>logout</a>
+                    <a href="#"  class="nav-link admin">Settings</a>
+                    <a href="#" class="nav-link admin " id="adminLogout" onclick=logout()>logout</a>
                 </nav>
 
                 <div id="profileButtonContainer">
