--- a/Register.html
+++ b/Register.html
@@ -49,7 +49,7 @@
     <!-- Popup container -->
     <div class="popup" id="popup">
         <div class="popup-content">
-            <p>Your registration was successful!</p>
+            <p style="color: #6366F1;">Your details have been saved</p>
             <button onclick="closePopup()">OK</button>
         </div>
     </div>
@@ -168,11 +168,13 @@
         // Function to open the popup
         function openPopup() {
             document.getElementById('popup').style.display = 'flex';
+            document.querySelector(".form-container").style.display = 'none'
         }
 
         // Function to close the popup and redirect to index.html
         function closePopup() {
             document.getElementById('popup').style.display = 'none';
+            document.querySelector(".form-container").style.display = 'block'
             window.location.href = 'index.html'; // Redirect to index.html after closing popup
         }
     </script>
